<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_no"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="addButtonClick"/>

    <Button
        android:id="@+id/minusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_minus"
        android:onClick="minusButtonClick"/>

    <Button
        android:id="@+id/productButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_product"
        android:onClick="productButtonClick"/>

    <Button
        android:id="@+id/quotientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_quotient"
        android:onClick="quotientButtonClick"/>

</LinearLayout>